exports[`<Text /> empty with children 1`] = `
<span
  className="rp_Text"
  style={null}>
  Hello World!
</span>
`;

exports[`<Text /> empty with multiple children 1`] = `
<span
  className="rp_Text"
  style={null}>
  Hello 
   World
</span>
`;

exports[`<Text /> empty with no children 1`] = `
<span
  className="rp_Text"
  style={null} />
`;

exports[`<Text /> nested Text 1`] = `
<span
  className="rp_Text"
  style={null}>
  <span
    className="rp_Text"
    style={null}>
    Hello
  </span>
  <span
    className="rp_Text"
    style={null}>
    World
  </span>
</span>
`;

exports[`<Text /> nested Text different depth 1`] = `
<span
  className="rp_Text"
  style={null}>
  <span
    className="rp_Text"
    style={null}>
    Hello
  </span>
  World
</span>
`;

exports[`<Text /> with a11y props 1`] = `
<span
  aria-hidden={false}
  aria-label="Label"
  aria-live={undefined}
  className="rp_Text"
  role={undefined}
  style={
    Object {
      "height": "20px",
      "width": "20px",
    }
  }>
  Hello World!
</span>
`;

exports[`<Text /> with multiple styles and some inline 1`] = `
<span
  className="rp_Text r1e1kp2h r1khqts81 "
  style={
    Object {
      "opacity": 0.5,
    }
  }>
  Hello World!
</span>
`;

exports[`<Text /> with single inline style 1`] = `
<span
  className="rp_Text"
  style={
    Object {
      "height": "20px",
      "width": "20px",
    }
  }>
  Hello World!
</span>
`;

exports[`<Text /> with single registered style 1`] = `
<span
  className="rp_Text r1e1kp2h"
  style={null}>
  Hello World!
</span>
`;
